# projectD_coursework

./: Instances.md  mailings_data.json  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/fixtures/: blog_data.json
blog/migrations/: 0001_initial.py  0002_alter_article_slug.py  0003_alter_article_slug.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templatetags/: media_tags.py
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_alter_mailing_content.py  0003_mailinglog.py  0004_alter_client_options_alter_mailing_options_and_more.py  0005_remove_mailing_recipients_alter_mailing_content_and_more.py  0006_remove_periods_pattern_periods_duration.py  0007_alter_mailinglog_client.py  0008_alter_mailinglog_client.py  0009_remove_mailing_content_mailing_message_body_and_more.py  0010_delete_message.py  0011_alter_mailing_audience.py  0012_alter_client_note.py  0013_alter_mailing_options_mailing_creator.py  0014_alter_mailing_options.py  0015_audience_creator_client_creator.py
mailings/templates/mailings/: audience_form.html  audience_list.html  base.html  client_confirm_delete.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  (+4 more)
users/: forms.py  models.py  permissions_mixins.py  services.py  texts.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_image.py
(+12 files in other folders)
