[tool.poetry]
name = "django-mailing"
version = "0.1.0"
description = ""
authors = ["Maxim Donchuk <m.donchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-crispy-forms = "^2.1"
django-environ = "^0.11.2"
crispy-bootstrap5 = "^0.7"
psycopg2-binary = "^2.9.9"
ipython = "^8.17.1"
django-crontab = "^0.7.1"
pillow = "^10.1.0"
pytils = "^0.4.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
